--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <nav class="hidden md:block">
                 <ul class="flex space-x-6">
                     <li><a href="#" class="hover:text-secondary transition-colors duration-300">Home</a></li>
-                    <li><a href="#" class="hover:text-secondary transition-colors duration-300">Services</a></li>
-                    <li><a href="#" class="hover:text-secondary transition-colors duration-300">About Us</a></li>
+                    <li><a href="service.html" class="hover:text-secondary transition-colors duration-300">Services</a></li>
+                    <li><a href="" class="hover:text-secondary transition-colors duration-300">About Us</a></li>
                     <li><a href="contact.html" class="hover:text-secondary transition-colors duration-300">Contact</a></li>
                 </ul>
             </nav>
@@ -74,8 +74,8 @@
         <nav id="mobileMenu" class="md:hidden mt-4 hidden">
             <ul class="flex flex-col space-y-2">
                 <li><a href="#" class="block py-2 px-4 hover-bg-secondary transition-colors duration-300">Home</a></li>
-                <li><a href="#" class="block py-2 px-4 hover-bg-secondary transition-colors duration-300">Services</a></li>
-                <li><a href="#" class="block py-2 px-4 hover-bg-secondary transition-colors duration-300">About Us</a></li>
+                <li><a href="service.html" class="block py-2 px-4 hover-bg-secondary transition-colors duration-300">Services</a></li>
+                <li><a href="" class="block py-2 px-4 hover-bg-secondary transition-colors duration-300">About Us</a></li>
                 <li><a href="contact.html" class="block py-2 px-4 hover-bg-secondary transition-colors duration-300">Contact</a></li>
             </ul>
         </nav>
@@ -197,6 +197,7 @@
                         <h2 class="text-2xl md:text-3xl font-bold mb-6 text-primary">Tell us what you need!</h2>
                         <p class="mb-6 text-gray-600 text-sm md:text-base">
                             We'll reach out to you with seamless solutions
+                            <br>
                             and virtual high-fives! Not spam.
                         </p>
                         <a href="/contact.html" class="bg-secondary hover:bg-opacity-90 text-white px-6 py-2 md:px-8 md:py-3 rounded-full text-base md:text-lg inline-block transition-all duration-300 hover:shadow-lg">
